updated the codes for more clarification

--- a/Irrigation_System.ipynb
+++ b/Irrigation_System.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "yNWQZ42ayL6T"
       },
       "outputs": [],
       "source": [
-        "# importing necessary libraries\n",
+        "# importing necessary libraries - gotta have these for data wrangling and model building\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
@@ -18,24 +18,24 @@
         "from sklearn.metrics import classification_report\n",
         "\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
-        "import joblib"
+        "import joblib # for saving the model later, just in case"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "QZphx0alyQBJ"
       },
       "outputs": [],
       "source": [
-        "# Load the dataset\n",
+        "# Load the dataset - let's get this data in here so we can work with it!\n",
         "df = pd.read_csv(\"/content/irrigation_machine.csv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -461,13 +461,13 @@
         }
       ],
       "source": [
-        "# Display the first 5 rows of the DataFrame\n",
+        "# Peek at the first 5 rows - see what we're dealing with here\n",
         "df.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -515,13 +515,13 @@
         }
       ],
       "source": [
-        "# Get information about the DataFrame (data types, non-null counts, memory usage)\n",
+        "# Get info about the data - like what kind of data we have and if anything's missing\n",
         "df.info()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -547,13 +547,13 @@
         }
       ],
       "source": [
-        "# Display the column names of the DataFrame\n",
+        "# Check out the column names - gotta know what everything is called\n",
         "df.columns"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -979,15 +979,15 @@
         }
       ],
       "source": [
-        "# Drop the 'Unnamed: 0' column as it appears to be an index column\n",
+        "# Drop that \"Unnamed: 0\" column - it just looks like an extra index, don't need it!\n",
         "df = df.drop('Unnamed: 0', axis=1)\n",
-        "# Display the first 5 rows after dropping the column\n",
+        "# Show the first 5 rows after dropping that column - just to be sure it worked\n",
         "df.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1503,30 +1503,30 @@
         }
       ],
       "source": [
-        "# Display descriptive statistics of the DataFrame\n",
+        "# Get some quick stats on the data - min, max, average, etc.\n",
         "df.describe()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "i4CIhf400Nvc"
       },
       "outputs": [],
       "source": [
-        "# Define features (sensor data) and labels (parcel activation)\n",
+        "# Define what we're using to predict (sensor data) and what we're predicting (parcel activation)\n",
         "\n",
-        "# Features (X) are the sensor columns (sensor_0 to sensor_19)\n",
+        "# Features (X) are all the sensor readings (sensor_0 to sensor_19)\n",
         "X = df.iloc[:, 0:20]\n",
         "\n",
-        "# Labels (y) are the parcel activation columns (parcel_0 to parcel_2)\n",
+        "# Labels (y) are whether each parcel is on or off (parcel_0 to parcel_2)\n",
         "y = df.iloc[:, 20:]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2085,13 +2085,13 @@
         }
       ],
       "source": [
-        "# Display a random sample of 10 rows from the features DataFrame\n",
+        "# Look at a random sample of 10 rows from the features - just a quick check\n",
         "X.sample(10)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2427,13 +2427,13 @@
         }
       ],
       "source": [
-        "# Display a random sample of 10 rows from the labels DataFrame\n",
+        "# Look at a random sample of 10 rows from the labels - see what the outputs look like\n",
         "y.sample(10)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2477,13 +2477,13 @@
         }
       ],
       "source": [
-        "# Get information about the features DataFrame\n",
+        "# Get info about the features data - make sure everything looks right\n",
         "X.info()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2510,13 +2510,13 @@
         }
       ],
       "source": [
-        "# Get information about the labels DataFrame\n",
+        "# Get info about the labels data - and this too!\n",
         "y.info()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3161,13 +3161,13 @@
         }
       ],
       "source": [
-        "# Display the features DataFrame\n",
+        "# Display the features data - all of it this time\n",
         "X"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3188,13 +3188,13 @@
         }
       ],
       "source": [
-        "# Display the shapes of the features and labels DataFrames\n",
+        "# Check the sizes of the features and labels - gotta make sure they match up\n",
         "X.shape, y.shape"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3227,28 +3227,28 @@
         }
       ],
       "source": [
-        "# Scale the features using MinMaxScaler\n",
+        "# Scale the features down - makes the numbers play nicer together for the model\n",
         "scaler = MinMaxScaler()\n",
         "X_scaled = scaler.fit_transform(X)\n",
-        "# Display the scaled features\n",
+        "# Show the scaled features - they should be between 0 and 1 now\n",
         "X_scaled"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "asbygD9m1HVD"
       },
       "outputs": [],
       "source": [
-        "# Split the data into training and testing sets\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)"
+        "# Split the data into training and testing sets - gotta train the model on some data and test it on data it hasn't seen before\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42) # 80% for training, 20% for testing, and 42 for consistency"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3269,13 +3269,13 @@
         }
       ],
       "source": [
-        "# Display the shapes of the training and testing sets\n",
+        "# Check the sizes of the training and testing sets - just to be sure the split worked right\n",
         "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3729,28 +3729,28 @@
         }
       ],
       "source": [
-        "# Train a Random Forest Classifier model\n",
+        "# Train a Random Forest Classifier model - let's build this thing!\n",
         "\n",
-        "# Initialize a RandomForestClassifier with specified hyperparameters\n",
+        "# Set up the RandomForestClassifier with some settings I think might work well\n",
         "rf = RandomForestClassifier(\n",
-        "    n_estimators=200,         # Number of trees in the forest\n",
-        "    max_depth=10,             # Maximum depth of individual trees\n",
-        "    min_samples_split=4,      # Minimum number of samples required to split an internal node\n",
-        "    min_samples_leaf=2,       # Minimum number of samples required to be at a leaf node\n",
-        "    max_features='sqrt',      # Number of features to consider when looking for the best split\n",
-        "    random_state=42           # Seed for random number generation for reproducibility\n",
+        "    n_estimators=200,         # Using 200 trees, seems like a good number\n",
+        "    max_depth=10,             # Don't want the trees to get too deep and overfit\n",
+        "    min_samples_split=4,      # Need at least 4 samples to split a node\n",
+        "    min_samples_leaf=2,       # Need at least 2 samples at the end of a branch\n",
+        "    max_features='sqrt',      # Only look at the square root of features when deciding where to split\n",
+        "    random_state=42           # Use this number so I get the same results every time\n",
         ")\n",
         "\n",
-        "# Wrap the RandomForestClassifier with MultiOutputClassifier to handle multiple output labels\n",
+        "# Use MultiOutputClassifier because we're predicting multiple things at once (which parcels are on)\n",
         "model = MultiOutputClassifier(rf)\n",
         "\n",
-        "# Train the model using the training data\n",
+        "# Train the model! Feed it the training data so it can learn\n",
         "model.fit(X_train, y_train)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3791,19 +3791,19 @@
         }
       ],
       "source": [
-        "# Evaluate the trained model\n",
+        "# Evaluate how well the model did - time to see the results!\n",
         "\n",
-        "# Predict the labels for the test set\n",
+        "# Make predictions on the test data - see what the model thinks the labels are\n",
         "y_pred = model.predict(X_test)\n",
         "\n",
-        "# Print the classification report\n",
+        "# Print a report on how well it classified things - precision, recall, f1-score, all that good stuff\n",
         "print(\"Classification Report:\")\n",
         "print(classification_report(y_test, y_pred, target_names=y.columns))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3824,13 +3824,13 @@
         }
       ],
       "source": [
-        "# Calculate and print the sum of each parcel column\n",
+        "# Calculate how many times each parcel was activated in the original data\n",
         "print(df[['parcel_0', 'parcel_1', 'parcel_2']].sum())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3852,42 +3852,42 @@
         }
       ],
       "source": [
-        "# Visualize sprinkler activation patterns\n",
+        "# Visualize when the sprinklers were on - let's see the patterns!\n",
         "\n",
-        "# Define parcel activation conditions with descriptive labels for plotting\n",
+        "# Set up the different sprinkler activation scenarios we want to plot\n",
         "conditions = {\n",
         "    \"Parcel 0 ON\": df['parcel_0'],\n",
         "    \"Parcel 1 ON\": df['parcel_1'],\n",
         "    \"Parcel 2 ON\": df['parcel_2'],\n",
-        "    \"Parcel 0 & 1 ON\": df['parcel_0'] & df['parcel_1'],\n",
-        "    \"Parcel 0 & 2 ON\": df['parcel_0'] & df['parcel_2'],\n",
-        "    \"Parcel 1 & 2 ON\": df['parcel_1'] & df['parcel_2'],\n",
-        "    \"All Parcels ON\": df['parcel_0'] & df['parcel_1'] & df['parcel_2'],\n",
+        "    \"Parcel 0 & 1 ON\": df['parcel_0'] & df['parcel_1'], # When both 0 and 1 were on\n",
+        "    \"Parcel 0 & 2 ON\": df['parcel_0'] & df['parcel_2'], # When both 0 and 2 were on\n",
+        "    \"Parcel 1 & 2 ON\": df['parcel_1'] & df['parcel_2'], # When both 1 and 2 were on\n",
+        "    \"All Parcels ON\": df['parcel_0'] & df['parcel_1'] & df['parcel_2'], # When all three were on!\n",
         "}\n",
         "\n",
-        "# Create vertically stacked subplots for each condition\n",
+        "# Create a bunch of plots, stacked on top of each other, one for each scenario\n",
         "fig, axs = plt.subplots(nrows=len(conditions), figsize=(10,15), sharex=True)\n",
         "\n",
-        "# Loop through each condition and plot a square wave representing its status\n",
+        "# Go through each scenario and plot a little step graph showing when it was \"ON\" (1) or \"OFF\" (0)\n",
         "for ax, (title, condition) in zip(axs, conditions.items()):\n",
-        "    ax.step(df.index, condition.astype(int), where='post', linewidth=1, color='teal')\n",
-        "    ax.set_title(f\"Sprinkler - {title}\")\n",
-        "    ax.set_ylabel(\"Status\")\n",
-        "    ax.set_yticks([0, 1])\n",
-        "    ax.set_yticklabels(['OFF', 'ON'])\n",
+        "    ax.step(df.index, condition.astype(int), where='post', linewidth=1, color='teal') # The step plot shows changes clearly\n",
+        "    ax.set_title(f\"Sprinkler - {title}\") # Give each plot a clear title\n",
+        "    ax.set_ylabel(\"Status\") # Label the side as \"Status\"\n",
+        "    ax.set_yticks([0, 1]) # Only have ticks at 0 and 1\n",
+        "    ax.set_yticklabels(['OFF', 'ON']) # Label 0 as OFF and 1 as ON\n",
         "\n",
         "\n",
-        "# Label the x-axis on the last subplot\n",
+        "# Label the bottom plot's x-axis - it's the same for all of them\n",
         "axs[-1].set_xlabel(\"Time Index (Row Number)\")\n",
         "\n",
-        "# Adjust layout and display the plot\n",
-        "plt.tight_layout() # Added for better spacing\n",
+        "# Make sure the plots don't overlap and then show them!\n",
+        "plt.tight_layout()\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3909,32 +3909,32 @@
         }
       ],
       "source": [
-        "# Visualize individual pump activity\n",
+        "# Visualize when each individual pump was working - and when any were on at the same time!\n",
         "\n",
-        "# Calculate combined activity of any pump being on (overlap)\n",
+        "# Figure out when *any* pump was on - this shows overall farm coverage\n",
         "any_pump_on = (df['parcel_0'] == 1) | (df['parcel_1'] == 1) | (df['parcel_2'] == 1)\n",
         "\n",
-        "plt.figure(figsize=(15, 5))\n",
+        "plt.figure(figsize=(15, 5)) # Make the plot a decent size\n",
         "\n",
-        "# Plot individual pump statuses as step plots\n",
+        "# Plot each pump's activity as a step plot - easy to see when they turn on and off\n",
         "plt.step(df.index, df['parcel_0'], where='post', linewidth=2, label='Parcel 0 Pump', color='blue')\n",
         "plt.step(df.index, df['parcel_1'], where='post', linewidth=2, label='Parcel 1 Pump', color='orange')\n",
         "plt.step(df.index, df['parcel_2'], where='post', linewidth=2, label='Parcel 2 Pump', color='green')\n",
         "\n",
-        "# Set plot title, labels, and ticks\n",
+        "# Give the plot a title, label the axes, and set the y-axis ticks to ON/OFF\n",
         "plt.title(\"Pump Activity and Combined Farm Coverage\")\n",
         "plt.xlabel(\"Time Index (Row Number)\")\n",
         "plt.ylabel(\"Status\")\n",
         "plt.yticks([0, 1], ['OFF', 'ON'])\n",
-        "plt.legend(loc='upper right')\n",
+        "plt.legend(loc='upper right') # Put the legend in a good spot\n",
         "\n",
-        "# Display the plot\n",
+        "# Show the plot!\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3955,7 +3955,7 @@
         }
       ],
       "source": [
-        "# Save the trained model to a file\n",
+        "# Save the trained model to a file - so I don't have to train it again!\n",
         "joblib.dump(model, \"Farm_Irrigation_System.pkl\")"
       ]
     }
